--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "type": "git",
     "url": "https://github.com/phatbhoy67/fcc-quote-tweet-parcel"
   },
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "predeploy": "rm -rf dist && parcel build index.html --public-url fcc-quote-tweet-parcel",
+    "predeploy": "rm -rf dist && parcel build index.html --public-url /fcc-quote-tweet-parcel/",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [
