--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.0.1",
+    "glob-parent": ">=5.1.2",
     "parcel-bundler": "^1.9.4"
   }
 }
